<resources>
    <string name="app_name">i山大</string>


    <dimen name="smallest_text_size">12sp</dimen>
    <string name="add_widget">Add widget</string>

    <!-- 测试用 -->
    <string name="test_number">15</string>
    <string name="test_name">表白昵称</string>
    <string name="test_date">2018-10-18 20:20</string>
    <string name="test_content">表白内容巴拉巴拉巴拉巴巴拉巴拉巴拉巴拉巴巴拉巴拉巴拉巴拉巴巴拉巴拉巴拉巴拉巴拉巴......</string>
    <string name="post_title">帖子</string>

    <!-- 正式 -->
    <string name="publish">发布</string>
    <string name="confession">表白</string>
    <string name="anonymous">匿名</string>
    <string name="title_hint">标题</string>

</resources>
