<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.layout.QMUIFrameLayout android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:foreground="?attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">


        <!--标题栏-->
        <LinearLayout
            android:id="@+id/post_user_area"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:adjustViewBounds="true"
                android:src="@drawable/confession_title"/>

            <TextView
                android:id="@+id/confession_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/test_name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="12sp"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/test_date"/>

        </LinearLayout>

        <!-- 内容区 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp">


            <!--表白内容-->
            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAdditionalText"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:text="@string/test_content"/>
        </LinearLayout>


        <!--点赞数和评论数-->
        <LinearLayout
            android:id="@+id/post_addition_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_like_selected"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:text="@string/test_number"/>

            <!--评论小图标-->
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_comment_item"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp" />

            <!--评论数-->
            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:text="@string/test_number"/>


        </LinearLayout>


    </LinearLayout>

</com.qmuiteam.qmui.layout.QMUIFrameLayout>